reworking scheduling